<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout style="@style/CategoryHorisontalContainerLayoutStyle">

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton3"
                            style="@style/CategoryButtonStyle"
                            app:srcCompat="@mipmap/ic_launcher_foreground"/>

                    <TextView
                            android:id="@+id/textView2"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/entertainment"/>
                </LinearLayout>

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton4"
                            style="@style/CategoryButtonStyle"
                            app:srcCompat="@mipmap/ic_art_foreground"/>

                    <TextView
                            android:id="@+id/textView4"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/art"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/CategoryHorisontalContainerLayoutStyle">

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton5"
                            style="@style/CategoryButtonStyle"
                            app:srcCompat="@mipmap/ic_food_foreground"/>

                    <TextView
                            android:id="@+id/textView5"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/cafes_and_restorants"/>
                </LinearLayout>

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton6"
                            style="@style/CategoryButtonStyle"
                            app:srcCompat="@mipmap/ic_sightseeing_foreground"/>

                    <TextView
                            android:id="@+id/textView6"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/sightseeing"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/CategoryHorisontalContainerLayoutStyle">

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton7"
                            style="@style/CategoryButtonStyle"
                            app:srcCompat="@mipmap/ic_education_foreground"/>

                    <TextView
                            android:id="@+id/textView7"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/educational"/>
                </LinearLayout>

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton8"
                            style="@style/CategoryButtonStyle"
                            app:srcCompat="@mipmap/ic_events_foreground"/>

                    <TextView
                            android:id="@+id/textView8"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/events"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/CategoryHorisontalContainerLayoutStyle">

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton9"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:padding="8dp"
                            app:srcCompat="@mipmap/ic_government_foreground"/>

                    <TextView
                            android:id="@+id/textView9"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/government"/>
                </LinearLayout>

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:padding="8dp"
                            app:srcCompat="@mipmap/ic_medical_foreground"/>

                    <TextView
                            android:id="@+id/textView10"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/medical"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout style="@style/CategoryHorisontalContainerLayoutStyle">

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton11"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:padding="8dp"
                            app:srcCompat="@mipmap/ic_shopping_foreground"/>

                    <TextView
                            android:id="@+id/textView11"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/shopping"/>
                </LinearLayout>

                <LinearLayout style="@style/CategoryLayoutStyle">

                    <ImageButton
                            android:id="@+id/imageButton12"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:padding="8dp"
                            app:srcCompat="@mipmap/ic_transport_foreground"/>

                    <TextView
                            android:id="@+id/textView12"
                            style="@style/CategoriesTextStyle"
                            android:text="@string/public_transport"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>